fixed spacing for h3 elements

--- a/src/styles/LightBoxDetailView.css
+++ b/src/styles/LightBoxDetailView.css
@@ -81,6 +81,10 @@
     margin-top: 1em;
 }
 
+.LightBoxDetailView__text h3 {
+    margin-top: 1em;
+}
+
 .LightBoxDetailView--printWatermark {
     display: none;
 }
